Code: Prepare event images of H > ZZ > 4l mode

--- a/Sample/process_h5_sample.ipynb
+++ b/Sample/process_h5_sample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,7 @@
     "    'Tower': 250,\n",
     "    'Track': 150,\n",
     "    'Photon': 2,\n",
+    "    'Lepton': 4,\n",
     "}"
    ]
   },
@@ -78,6 +79,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'./data/GGF_ZZ-03.h5' and () are same structure, can be merged.\n",
+      "./data/GGF_ZZ-03_merged.h5 not exist. Copy ./data/GGF_ZZ-03.h5 to ./data/GGF_ZZ-03_merged.h5\n",
+      "Size of ./data/GGF_ZZ-03.h5: 65399\n",
+      "'./data/VBF_ZZ-03.h5' and () are same structure, can be merged.\n",
+      "./data/VBF_ZZ-03_merged.h5 not exist. Copy ./data/VBF_ZZ-03.h5 to ./data/VBF_ZZ-03_merged.h5\n",
+      "Size of ./data/VBF_ZZ-03.h5: 133162\n"
+     ]
+    }
+   ],
+   "source": [
+    "files = [f'./data/GGF_ZZ-{i:02}.h5' for i in range(3, 4)]\n",
+    "\n",
+    "merged_file = utils_h5.merge_h5_file(*files)\n",
+    "new_name = './data/GGF_ZZ_4l.h5'\n",
+    "\n",
+    "os.rename(merged_file, new_name)\n",
+    "\n",
+    "files = [f'./data/VBF_ZZ-{i:02}.h5' for i in range(3, 4)]\n",
+    "\n",
+    "merged_file = utils_h5.merge_h5_file(*files)\n",
+    "new_name = './data/VBF_ZZ_4l.h5'\n",
+    "\n",
+    "os.rename(merged_file, new_name)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -86,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,16 +160,49 @@
     "\n",
     "    f.create_dataset('EVENT/mjj', (nevent,), maxshape=(None,), dtype='<f4')\n",
     "    f.create_dataset('EVENT/deta', (nevent,), maxshape=(None,), dtype='<f4')\n",
+    "    f.create_dataset('EVENT/type', (nevent,), maxshape=(None,), dtype='<i8')\n",
+    "\n",
+    "def create_dataset_ZZ(f, nevent, MAX_CONSTI):\n",
+    "\n",
+    "    f.create_dataset('J1/mask', (nevent, MAX_CONSTI['Jet']), maxshape=(None, MAX_CONSTI['Jet']), dtype='|b1')\n",
+    "    f.create_dataset('J1/pt', (nevent, MAX_CONSTI['Jet']), maxshape=(None, MAX_CONSTI['Jet']), dtype='<f4')\n",
+    "    f.create_dataset('J1/eta', (nevent, MAX_CONSTI['Jet']), maxshape=(None, MAX_CONSTI['Jet']), dtype='<f4')\n",
+    "    f.create_dataset('J1/phi', (nevent, MAX_CONSTI['Jet']), maxshape=(None, MAX_CONSTI['Jet']), dtype='<f4')\n",
+    "    f.create_dataset('J1/flavor', (nevent,), maxshape=(None,), dtype='<i8')\n",
+    "\n",
+    "    f.create_dataset('J2/mask', (nevent, MAX_CONSTI['Jet']), maxshape=(None, MAX_CONSTI['Jet']), dtype='|b1')\n",
+    "    f.create_dataset('J2/pt', (nevent, MAX_CONSTI['Jet']), maxshape=(None, MAX_CONSTI['Jet']), dtype='<f4')\n",
+    "    f.create_dataset('J2/eta', (nevent, MAX_CONSTI['Jet']), maxshape=(None, MAX_CONSTI['Jet']), dtype='<f4')\n",
+    "    f.create_dataset('J2/phi', (nevent, MAX_CONSTI['Jet']), maxshape=(None, MAX_CONSTI['Jet']), dtype='<f4')\n",
+    "    f.create_dataset('J2/flavor', (nevent,), maxshape=(None,), dtype='<i8')\n",
+    "\n",
+    "    f.create_dataset('TOWER/mask', (nevent, MAX_CONSTI['Tower']), maxshape=(None, MAX_CONSTI['Tower']), dtype='|b1')\n",
+    "    f.create_dataset('TOWER/pt', (nevent, MAX_CONSTI['Tower']), maxshape=(None, MAX_CONSTI['Tower']), dtype='<f4')\n",
+    "    f.create_dataset('TOWER/eta', (nevent, MAX_CONSTI['Tower']), maxshape=(None, MAX_CONSTI['Tower']), dtype='<f4')\n",
+    "    f.create_dataset('TOWER/phi', (nevent, MAX_CONSTI['Tower']), maxshape=(None, MAX_CONSTI['Tower']), dtype='<f4')\n",
+    "\n",
+    "    f.create_dataset('TRACK/mask', (nevent, MAX_CONSTI['Track']), maxshape=(None, MAX_CONSTI['Track']), dtype='|b1')\n",
+    "    f.create_dataset('TRACK/pt', (nevent, MAX_CONSTI['Track']), maxshape=(None, MAX_CONSTI['Track']), dtype='<f4')\n",
+    "    f.create_dataset('TRACK/eta', (nevent, MAX_CONSTI['Track']), maxshape=(None, MAX_CONSTI['Track']), dtype='<f4')\n",
+    "    f.create_dataset('TRACK/phi', (nevent, MAX_CONSTI['Track']), maxshape=(None, MAX_CONSTI['Track']), dtype='<f4')\n",
+    "\n",
+    "    f.create_dataset('LEPTON/pt', (nevent, MAX_CONSTI['Lepton']), maxshape=(None, MAX_CONSTI['Lepton']), dtype='<f4')\n",
+    "    f.create_dataset('LEPTON/eta', (nevent, MAX_CONSTI['Lepton']), maxshape=(None, MAX_CONSTI['Lepton']), dtype='<f4')\n",
+    "    f.create_dataset('LEPTON/phi', (nevent, MAX_CONSTI['Lepton']), maxshape=(None, MAX_CONSTI['Lepton']), dtype='<f4')\n",
+    "    f.create_dataset('LEPTON/flavor', (nevent, MAX_CONSTI['Lepton']), maxshape=(None, MAX_CONSTI['Lepton']), dtype='<i8')\n",
+    "\n",
+    "    f.create_dataset('EVENT/mjj', (nevent,), maxshape=(None,), dtype='<f4')\n",
+    "    f.create_dataset('EVENT/deta', (nevent,), maxshape=(None,), dtype='<f4')\n",
     "    f.create_dataset('EVENT/type', (nevent,), maxshape=(None,), dtype='<i8')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def split_SR_BR(h5_path, output_path, cut_type='mjj', cut_value=300):\n",
+    "def split_SR_BR(h5_path, output_path, cut_type='mjj', cut_value=300, mode='di-photon'):\n",
     "    # read data\n",
     "    with h5py.File(h5_path, 'r') as f:\n",
     "\n",
@@ -177,8 +245,14 @@
     "\n",
     "        with h5py.File(SR_path, 'w') as f_SR, h5py.File(BR_path, 'w') as f_SB:\n",
     "\n",
-    "            create_dataset(f_SR, SR_range.sum(), MAX_CONSTI)\n",
-    "            create_dataset(f_SB, BR_range.sum(), MAX_CONSTI)\n",
+    "            if mode == 'di-photon':\n",
+    "                create_dataset(f_SR, SR_range.sum(), MAX_CONSTI)\n",
+    "                create_dataset(f_SB, BR_range.sum(), MAX_CONSTI)\n",
+    "            elif mode == 'ZZ_4l':\n",
+    "                create_dataset_ZZ(f_SR, SR_range.sum(), MAX_CONSTI)\n",
+    "                create_dataset_ZZ(f_SB, BR_range.sum(), MAX_CONSTI)\n",
+    "            else:\n",
+    "                raise ValueError(f'mode {mode} not supported')\n",
     "\n",
     "            keys = get_dataset_keys(f_SR)\n",
     "            for key in keys:\n",
@@ -315,6 +389,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cut_type = 'quark_jet'\n",
+    "cut_value = 2\n",
+    "\n",
+    "h5_path = 'data/ZZ_4l/GGF_ZZ_4l.h5'\n",
+    "output_path = f'data/ZZ_4l/{cut_type}_{cut_value}_cut/GGF_ZZ_4l.h5'\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value, mode='ZZ_4l')\n",
+    "\n",
+    "h5_path = 'data/ZZ_4l/VBF_ZZ_4l.h5'\n",
+    "output_path = f'data/ZZ_4l/{cut_type}_{cut_value}_cut/VBF_ZZ_4l.h5'\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value, mode='ZZ_4l')\n",
+    "\n",
+    "cut_value = 1\n",
+    "\n",
+    "h5_path = 'data/ZZ_4l/GGF_ZZ_4l.h5'\n",
+    "output_path = f'data/ZZ_4l/{cut_type}_{cut_value}_cut/GGF_ZZ_4l.h5'\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value, mode='ZZ_4l')\n",
+    "\n",
+    "h5_path = 'data/ZZ_4l/VBF_ZZ_4l.h5'\n",
+    "output_path = f'data/ZZ_4l/{cut_type}_{cut_value}_cut/VBF_ZZ_4l.h5'\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value, mode='ZZ_4l')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -323,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +451,31 @@
     "\n",
     "        f_out['TOWER/phi'][:] = new_phi[:, :MAX_CONSTI['Tower']]\n",
     "        f_out['TRACK/phi'][:] = new_phi[:, MAX_CONSTI['Tower']:MAX_CONSTI['Tower']+MAX_CONSTI['Track']]\n",
-    "        f_out['PHOTON/phi'][:] = new_phi[:, MAX_CONSTI['Tower']+MAX_CONSTI['Track']:]"
+    "        f_out['PHOTON/phi'][:] = new_phi[:, MAX_CONSTI['Tower']+MAX_CONSTI['Track']:]\n",
+    "\n",
+    "def to_event_image_h5_ZZ(h5_path, out_h5):\n",
+    "    \n",
+    "    out_h5 = Path(out_h5)\n",
+    "    out_h5.parent.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    shutil.copyfile(h5_path, out_h5)\n",
+    "\n",
+    "    with h5py.File(out_h5, 'a') as f_out:\n",
+    "        print(out_h5)\n",
+    "\n",
+    "        event_pt = np.concatenate([f_out['TOWER/pt'][:], f_out['TRACK/pt'][:], f_out['LEPTON/pt'][:]], axis=1)\n",
+    "        event_eta = np.concatenate([f_out['TOWER/eta'][:], f_out['TRACK/eta'][:], f_out['LEPTON/eta'][:]], axis=1)\n",
+    "        event_phi = np.concatenate([f_out['TOWER/phi'][:], f_out['TRACK/phi'][:], f_out['LEPTON/phi'][:]], axis=1)\n",
+    "\n",
+    "        _, new_eta, new_phi = phi_shift_and_flipping(event_pt, event_eta, event_phi)\n",
+    "\n",
+    "        f_out['TOWER/eta'][:] = new_eta[:, :MAX_CONSTI['Tower']]\n",
+    "        f_out['TRACK/eta'][:] = new_eta[:, MAX_CONSTI['Tower']:MAX_CONSTI['Tower']+MAX_CONSTI['Track']]\n",
+    "        f_out['LEPTON/eta'][:] = new_eta[:, MAX_CONSTI['Tower']+MAX_CONSTI['Track']:]\n",
+    "\n",
+    "        f_out['TOWER/phi'][:] = new_phi[:, :MAX_CONSTI['Tower']]\n",
+    "        f_out['TRACK/phi'][:] = new_phi[:, MAX_CONSTI['Tower']:MAX_CONSTI['Tower']+MAX_CONSTI['Track']]\n",
+    "        f_out['LEPTON/phi'][:] = new_phi[:, MAX_CONSTI['Tower']+MAX_CONSTI['Track']:]"
    ]
   },
   {
@@ -540,6 +666,36 @@
     "    h5_path = f'./data/quark_gluon_jet_2_cut/{name}.h5'\n",
     "    out_h5 = f'./data/quark_gluon_jet_2_cut/pre-processing/{name}.h5'\n",
     "    to_event_image_h5(h5_path, out_h5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $H \\to ZZ \\to 4\\ell$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_ZZ_4l_in_SR.h5\n",
+      "data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_ZZ_4l_in_BR.h5\n",
+      "data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_ZZ_4l_in_SR.h5\n",
+      "data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_ZZ_4l_in_BR.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in ['VBF_ZZ_4l_in_SR', 'VBF_ZZ_4l_in_BR', 'GGF_ZZ_4l_in_SR', 'GGF_ZZ_4l_in_BR']:\n",
+    "    h5_path = f'./data/ZZ_4l/quark_jet_2_cut/{name}.h5'\n",
+    "    out_h5 = f'./data/ZZ_4l/quark_jet_2_cut/pre-processing/{name}.h5'\n",
+    "    to_event_image_h5_ZZ(h5_path, out_h5)"
    ]
   },
   {
@@ -1917,6 +2073,76 @@
     "        npy_path = npy_dir / f'{name}.npy'\n",
     "        cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
     "        print(cmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $H \\to ZZ \\to 4\\ell$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python pixelation.py data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_ZZ_4l_in_SR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/40x40/VBF_ZZ_4l_in_SR.npy 40 &\n",
+      "python pixelation.py data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_ZZ_4l_in_BR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/40x40/VBF_ZZ_4l_in_BR.npy 40 &\n",
+      "python pixelation.py data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_ZZ_4l_in_SR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/40x40/GGF_ZZ_4l_in_SR.npy 40 &\n",
+      "python pixelation.py data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_ZZ_4l_in_BR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/40x40/GGF_ZZ_4l_in_BR.npy 40 &\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = 40\n",
+    "h5_dir = Path('./data/ZZ_4l/quark_jet_2_cut/pre-processing')\n",
+    "npy_dir = Path(f'./data/ZZ_4l/quark_jet_2_cut/pre-processing/{res}x{res}')\n",
+    "\n",
+    "# create output directory\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name in ['VBF_ZZ_4l_in_SR', 'VBF_ZZ_4l_in_BR', 'GGF_ZZ_4l_in_SR', 'GGF_ZZ_4l_in_BR']:\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
+    "    cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
+    "    print(cmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python pixelation-remove_decay_product_info.py data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_ZZ_4l_in_SR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_4/40x40/VBF_ZZ_4l_in_SR.npy 40 4 &\n",
+      "python pixelation-remove_decay_product_info.py data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_ZZ_4l_in_BR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_4/40x40/VBF_ZZ_4l_in_BR.npy 40 4 &\n",
+      "python pixelation-remove_decay_product_info.py data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_ZZ_4l_in_SR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_4/40x40/GGF_ZZ_4l_in_SR.npy 40 4 &\n",
+      "python pixelation-remove_decay_product_info.py data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_ZZ_4l_in_BR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_4/40x40/GGF_ZZ_4l_in_BR.npy 40 4 &\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = 40\n",
+    "case = 4\n",
+    "h5_dir = Path('./data/ZZ_4l/quark_jet_2_cut/pre-processing')\n",
+    "npy_dir = Path(f'./data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_{case}/{res}x{res}')\n",
+    "\n",
+    "# create output directory\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name in ['VBF_ZZ_4l_in_SR', 'VBF_ZZ_4l_in_BR', 'GGF_ZZ_4l_in_SR', 'GGF_ZZ_4l_in_BR']:\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
+    "    cmd = f'python pixelation-remove_decay_product_info.py {h5_path} {npy_path} {res} {case} &'\n",
+    "    print(cmd)"
    ]
   }
  ],
