--- a/Sample/process_h5_sample.ipynb
+++ b/Sample/process_h5_sample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,27 +87,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'./data/GGF_ZZ-03.h5' and () are same structure, can be merged.\n",
-      "./data/GGF_ZZ-03_merged.h5 not exist. Copy ./data/GGF_ZZ-03.h5 to ./data/GGF_ZZ-03_merged.h5\n",
-      "Size of ./data/GGF_ZZ-03.h5: 65399\n",
-      "'./data/VBF_ZZ-03.h5' and () are same structure, can be merged.\n",
-      "./data/VBF_ZZ-03_merged.h5 not exist. Copy ./data/VBF_ZZ-03.h5 to ./data/VBF_ZZ-03_merged.h5\n",
-      "Size of ./data/VBF_ZZ-03.h5: 133162\n"
+      "'./data/ZZ_4l/GGF_ZZ-03.h5' and () are same structure, can be merged.\n",
+      "./data/ZZ_4l/GGF_ZZ-03_merged.h5 not exist. Copy ./data/ZZ_4l/GGF_ZZ-03.h5 to ./data/ZZ_4l/GGF_ZZ-03_merged.h5\n",
+      "Size of ./data/ZZ_4l/GGF_ZZ-03.h5: 65399\n",
+      "'./data/ZZ_4l/VBF_ZZ-03.h5' and () are same structure, can be merged.\n",
+      "./data/ZZ_4l/VBF_ZZ-03_merged.h5 not exist. Copy ./data/ZZ_4l/VBF_ZZ-03.h5 to ./data/ZZ_4l/VBF_ZZ-03_merged.h5\n",
+      "Size of ./data/ZZ_4l/VBF_ZZ-03.h5: 133162\n"
      ]
     }
    ],
    "source": [
-    "files = [f'./data/GGF_ZZ-{i:02}.h5' for i in range(3, 4)]\n",
+    "files = [f'./data/ZZ_4l/GGF_ZZ-{i:02}.h5' for i in range(3, 4)]\n",
     "\n",
     "merged_file = utils_h5.merge_h5_file(*files)\n",
-    "new_name = './data/GGF_ZZ_4l.h5'\n",
+    "new_name = './data/ZZ_4l/GGF.h5'\n",
     "\n",
     "os.rename(merged_file, new_name)\n",
     "\n",
-    "files = [f'./data/VBF_ZZ-{i:02}.h5' for i in range(3, 4)]\n",
+    "files = [f'./data/ZZ_4l/VBF_ZZ-{i:02}.h5' for i in range(3, 4)]\n",
     "\n",
     "merged_file = utils_h5.merge_h5_file(*files)\n",
-    "new_name = './data/VBF_ZZ_4l.h5'\n",
+    "new_name = './data/ZZ_4l/VBF.h5'\n",
     "\n",
     "os.rename(merged_file, new_name)"
    ]
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,29 +390,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "cut_type = 'quark_jet'\n",
     "cut_value = 2\n",
     "\n",
-    "h5_path = 'data/ZZ_4l/GGF_ZZ_4l.h5'\n",
-    "output_path = f'data/ZZ_4l/{cut_type}_{cut_value}_cut/GGF_ZZ_4l.h5'\n",
+    "h5_path = 'data/ZZ_4l/GGF.h5'\n",
+    "output_path = f'data/ZZ_4l/{cut_type}_{cut_value}_cut/GGF.h5'\n",
     "split_SR_BR(h5_path, output_path, cut_type, cut_value, mode='ZZ_4l')\n",
     "\n",
-    "h5_path = 'data/ZZ_4l/VBF_ZZ_4l.h5'\n",
-    "output_path = f'data/ZZ_4l/{cut_type}_{cut_value}_cut/VBF_ZZ_4l.h5'\n",
+    "h5_path = 'data/ZZ_4l/VBF.h5'\n",
+    "output_path = f'data/ZZ_4l/{cut_type}_{cut_value}_cut/VBF.h5'\n",
     "split_SR_BR(h5_path, output_path, cut_type, cut_value, mode='ZZ_4l')\n",
     "\n",
     "cut_value = 1\n",
     "\n",
-    "h5_path = 'data/ZZ_4l/GGF_ZZ_4l.h5'\n",
-    "output_path = f'data/ZZ_4l/{cut_type}_{cut_value}_cut/GGF_ZZ_4l.h5'\n",
+    "h5_path = 'data/ZZ_4l/GGF.h5'\n",
+    "output_path = f'data/ZZ_4l/{cut_type}_{cut_value}_cut/GGF.h5'\n",
     "split_SR_BR(h5_path, output_path, cut_type, cut_value, mode='ZZ_4l')\n",
     "\n",
-    "h5_path = 'data/ZZ_4l/VBF_ZZ_4l.h5'\n",
-    "output_path = f'data/ZZ_4l/{cut_type}_{cut_value}_cut/VBF_ZZ_4l.h5'\n",
+    "h5_path = 'data/ZZ_4l/VBF.h5'\n",
+    "output_path = f'data/ZZ_4l/{cut_type}_{cut_value}_cut/VBF.h5'\n",
     "split_SR_BR(h5_path, output_path, cut_type, cut_value, mode='ZZ_4l')"
    ]
   },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,22 +677,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_ZZ_4l_in_SR.h5\n",
-      "data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_ZZ_4l_in_BR.h5\n",
-      "data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_ZZ_4l_in_SR.h5\n",
-      "data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_ZZ_4l_in_BR.h5\n"
+      "data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_in_SR.h5\n",
+      "data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_in_BR.h5\n",
+      "data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_in_SR.h5\n",
+      "data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_in_BR.h5\n"
      ]
     }
    ],
    "source": [
-    "for name in ['VBF_ZZ_4l_in_SR', 'VBF_ZZ_4l_in_BR', 'GGF_ZZ_4l_in_SR', 'GGF_ZZ_4l_in_BR']:\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
     "    h5_path = f'./data/ZZ_4l/quark_jet_2_cut/{name}.h5'\n",
     "    out_h5 = f'./data/ZZ_4l/quark_jet_2_cut/pre-processing/{name}.h5'\n",
     "    to_event_image_h5_ZZ(h5_path, out_h5)"
@@ -2084,17 +2084,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python pixelation.py data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_ZZ_4l_in_SR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/40x40/VBF_ZZ_4l_in_SR.npy 40 &\n",
-      "python pixelation.py data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_ZZ_4l_in_BR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/40x40/VBF_ZZ_4l_in_BR.npy 40 &\n",
-      "python pixelation.py data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_ZZ_4l_in_SR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/40x40/GGF_ZZ_4l_in_SR.npy 40 &\n",
-      "python pixelation.py data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_ZZ_4l_in_BR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/40x40/GGF_ZZ_4l_in_BR.npy 40 &\n"
+      "python pixelation.py data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_in_SR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/40x40/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_in_BR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/40x40/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_in_SR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/40x40/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_in_BR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/40x40/GGF_in_BR.npy 40 &\n"
      ]
     }
    ],
@@ -2106,7 +2106,7 @@
     "# create output directory\n",
     "npy_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "for name in ['VBF_ZZ_4l_in_SR', 'VBF_ZZ_4l_in_BR', 'GGF_ZZ_4l_in_SR', 'GGF_ZZ_4l_in_BR']:\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
     "    h5_path = h5_dir / f'{name}.h5'\n",
     "    npy_path = npy_dir / f'{name}.npy'\n",
     "    cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
@@ -2115,17 +2115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python pixelation-remove_decay_product_info.py data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_ZZ_4l_in_SR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_4/40x40/VBF_ZZ_4l_in_SR.npy 40 4 &\n",
-      "python pixelation-remove_decay_product_info.py data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_ZZ_4l_in_BR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_4/40x40/VBF_ZZ_4l_in_BR.npy 40 4 &\n",
-      "python pixelation-remove_decay_product_info.py data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_ZZ_4l_in_SR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_4/40x40/GGF_ZZ_4l_in_SR.npy 40 4 &\n",
-      "python pixelation-remove_decay_product_info.py data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_ZZ_4l_in_BR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_4/40x40/GGF_ZZ_4l_in_BR.npy 40 4 &\n"
+      "python pixelation-remove_decay_product_info.py data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_in_SR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_4/40x40/VBF_in_SR.npy 40 4 &\n",
+      "python pixelation-remove_decay_product_info.py data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_in_BR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_4/40x40/VBF_in_BR.npy 40 4 &\n",
+      "python pixelation-remove_decay_product_info.py data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_in_SR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_4/40x40/GGF_in_SR.npy 40 4 &\n",
+      "python pixelation-remove_decay_product_info.py data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_in_BR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_4/40x40/GGF_in_BR.npy 40 4 &\n"
      ]
     }
    ],
@@ -2138,7 +2138,7 @@
     "# create output directory\n",
     "npy_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "for name in ['VBF_ZZ_4l_in_SR', 'VBF_ZZ_4l_in_BR', 'GGF_ZZ_4l_in_SR', 'GGF_ZZ_4l_in_BR']:\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
     "    h5_path = h5_dir / f'{name}.h5'\n",
     "    npy_path = npy_dir / f'{name}.npy'\n",
     "    cmd = f'python pixelation-remove_decay_product_info.py {h5_path} {npy_path} {res} {case} &'\n",
