--- a/Note/note.tex
+++ b/Note/note.tex
@@ -902,6 +902,150 @@
 
 % section phi_shifting_with_fixed_angle (end)
 
+\section{\texorpdfstring{$H \to ZZ^* \to 4\ell$}{H to ZZ to 4l} channel}% (fold)
+\label{sec:h_to_zz_to_4l_channel}
+    
+    \subsection{Sample preparation}% (fold)
+    \label{sub:sample_preparation}
+        
+        We consider SM Higgs decay into $ZZ$ via GGF and VBF channels at a center-of-mass energy of $\sqrt{s} = 14$ TeV. We focus on the fully leptonic mode: $H \to ZZ^* \to 4\ell$. The Higgs boson events are generated using \verb|MadGraph 3.3.1|~\cite{Alwall:2014hca} for both GGF and VBF production. The parton showering and hadronization are simulated using \verb|Pythia 8.306|~\cite{Sjostrand:2014zea}. The detector simulation is conducted by \verb|Delphes 3.4.2|~\cite{deFavereau:2013fsa}. Jet reconstruction is performed using \verb|FastJet 3.3.2|~\cite{Cacciari:2011ma} with the anti-$k_t$ algorithm~\cite{Cacciari:2008gp} and a jet radius of $R = 0.4$. These jets are required to have transverse momentum $p_{\text{T}} > 25$ GeV.
+
+        The following \verb|MadGraph| scripts generate Monte Carlo samples for each production channel.
+        \paragraph{GGF Higgs Sample Generation}
+        \begin{lstlisting}
+            import model loop_sm
+            generate p p > h > l+ l- l+ l- QCD=0 QED<=4 [noborn=QCD]
+            output GGF_Higgs_ZZ_4l
+            launch GGF_Higgs_ZZ_4l
+
+            shower=Pythia8
+            detector=Delphes
+            analysis=OFF
+            madspin=OFF
+            done
+
+            Cards/delphes_card.dat
+
+            set run_card nevents 10000
+            set run_card ebeam1 7000.0
+            set run_card ebeam2 7000.0
+
+            set run_card use_syst False
+
+            done
+        \end{lstlisting}
+        \paragraph{VBF Higgs Sample Generation}
+        \begin{lstlisting}
+            define v = w+ w- z
+            generate p p > h j j $$v, (h > z z , z > l+ l- , z > l+ l-) QCD<=99
+            output VBF_Higgs_ZZ_4l
+            launch VBF_Higgs_ZZ_4l
+
+            shower=Pythia8
+            detector=Delphes
+            analysis=OFF
+            madspin=OFF
+            done
+
+            Cards/delphes_card.dat
+
+            set run_card nevents 10000
+            set run_card ebeam1 7000.0
+            set run_card ebeam2 7000.0
+
+            set run_card use_syst False
+
+            done
+        \end{lstlisting}
+
+        The selection cuts after the \verb|Delphes| simulation:
+        \begin{itemize}
+            \item $n_{l}$ cut: The number of leptons should be at least 4.
+            \item $n_{j}$ cut: The number of jets should be at least 2.
+        \end{itemize}
+
+        Table~\ref{tab:GGF_VBF_Higgs_cutflow_number} summarizes the cutflow number at different selection cuts.
+        \begin{table}[htpb]
+            \centering
+            \caption{Number of passing events and passing rates for GGF and VBF Higgs production at different selection cuts.}
+            \label{tab:GGF_VBF_Higgs_cutflow_number}
+            \begin{tabular}{l|rr|rr}
+                Cut         & GGF   & pass rate & VBF   & pass rate \\ \hline
+                Total       & 10000 & 1         & 10000 & 1         \\
+                $n_{l}$ cut & 2731  & 0.27      & 1902  & 0.19      \\
+                $n_j$ cut   & 687   & 0.07      & 1650  & 0.17
+            \end{tabular}
+        \end{table}
+
+        The branching ratio for the 4-lepton channel is $\Gamma\left( h \to 4\ell, \ell = e, \mu \right) = 1.240 \times 10^{-4}$, as given in \href{https://twiki.cern.ch/twiki/bin/view/LHCPhysics/CERNYellowReportPageBR}{this link}. Assuming the luminosity of $\mathcal{L} = \text{3000 fb}^{-1}$, we can estimate the number of events belonging to the SR and BR. The SR and BR are defined based on the number of gluon jets $n_g$ and quark jets $n_q$. The selection results are summarized in table~\ref{tab:number_of_event_in_mixed_dataset_gluon_jet}.
+
+        \begin{table}[htpb]
+            \centering
+            \caption{The number of events of mixed datasets under different selection cuts. Here, $agbq$ means that $n_g=a, n_q=b$.}
+            \label{tab:number_of_event_in_mixed_dataset_gluon_jet}
+            \subfloat[SR: $2q0g$; \\ BR: $1q1g, 0q2g$]{
+                \begin{tabular}{c|cc}
+                       & GGF   & VBF     \\ \hline
+                    SR & 722 & 228   \\
+                    BR & 704 & 34    \\
+                \end{tabular}
+            }
+            \subfloat[SR: $2q0g, 1q1g$; \\ BR: $0q2g$]{
+                \begin{tabular}{c|cc}
+                       & GGF   & VBF   \\ \hline
+                    SR & 1287 & 261 \\
+                    BR & 138  & 1    \\
+                \end{tabular}
+            }
+        \end{table}
+    % subsection sample_preparation (end)
+    \subsection{Event image of \texorpdfstring{$H \to ZZ^* \to 4\ell$}{H to ZZ to 4l} mode}% (fold)
+    \label{sub:event_image_of_h_to_zz_to_4l_mode}
+        
+        We follow the same procedure described in section~\ref{sub:event_image} to construct the event image. Each event image contains only two channels: calorimeter towers and tracks. To enable transferability of the trained CNN model across different decay modes, we remove decay product (lepton) information from the event images.
+
+        Figure~\ref{fig:GGF_VBF_event_image} shows representative event images for the $ H\to ZZ^* \to 4\ell$ mode, separated by production mechanism (GGF and VBF) and by feature type (calorimeter tower or track). 
+        \begin{figure}[htpb]
+            \centering
+            \subfloat[GGF: Calorimeter Tower]{
+                \includegraphics[width=0.45\textwidth]{event_image_GGF-ZZ_4l-tower.pdf}
+            }
+            \subfloat[VBF: Calorimeter Tower]{
+                \includegraphics[width=0.45\textwidth]{event_image_VBF-ZZ_4l-tower.pdf}
+            } \\
+            \subfloat[GGF: Track]{
+                \includegraphics[width=0.45\textwidth]{event_image_GGF-ZZ_4l-track.pdf}
+            }
+            \subfloat[VBF: Track]{
+                \includegraphics[width=0.45\textwidth]{event_image_VBF-ZZ_4l-track.pdf}
+            } \\
+            \caption{Event images for $H \to ZZ^* \to 4\ell$ events produced via GGF and VBF. Images are shown separately for the calorimeter tower and track channels.}
+            \label{fig:GGF_VBF_event_image}
+        \end{figure}
+    % subsection event_image_of_h_to_zz_to_4ell_mode (end)
+    \subsection{Testing results of di-photon classifier}% (fold)
+    \label{sub:testing_results_of_di_photon_classifier}
+        We evaluate the performance of the $H \to \gamma\gamma$ classifier trained in section~\ref{sec:removing_photon_information} on a different decay mode: $H \to ZZ^* \to 4\ell$. We focus on Case 1, where both the photon channel and photon-related features in the tower channel are removed from the input. This setting is designed to test whether a model trained without explicit decay production information can still extract meaningful patterns applicable to other decay modes.
+
+        The evaluation is performed using the $2q0g$ dataset for both decay channels. Table~\ref{tab:CWoLa_CNN_training_results_3000_jet_tagging_eta_phi_aug_5_10_15_remove_photon_ZZ4l} summarizes the results.
+        \begin{table}[htpb]
+            \centering
+            \caption{CNN training results for Case 1: both the photon channel and Tower photon-related features are removed. The classifier is trained on $H \to \gamma\gamma$ and evaluated on both $H \to \gamma\gamma$ and $H \to ZZ^* \to 4\ell$. The ACC and AUC are evaluated based on 10 training.}
+            \label{tab:CWoLa_CNN_training_results_3000_jet_tagging_eta_phi_aug_5_10_15_remove_photon_ZZ4l}
+            \begin{tabular}{l|cc|cc}
+                         & \multicolumn{2}{c|}{$H\to\gamma\gamma$}      & \multicolumn{2}{c}{$H\to ZZ^*\to 4\ell$}           \\ \hline
+                Datasets & ACC               & AUC               & ACC               & AUC               \\ \hline
+                Original & $0.690 \pm 0.005$ & $0.750 \pm 0.008$ & $0.621 \pm 0.022$ & $0.665 \pm 0.027$ \\
+                +5       & $0.695 \pm 0.008$ & $0.747 \pm 0.005$ & $0.592 \pm 0.012$ & $0.624 \pm 0.016$ \\
+                +10      & $0.698 \pm 0.008$ & $0.752 \pm 0.010$ & $0.593 \pm 0.013$ & $0.627 \pm 0.020$ \\
+                +15      & $0.700 \pm 0.010$ & $0.755 \pm 0.010$ & $0.589 \pm 0.012$ & $0.621 \pm 0.019$
+            \end{tabular}
+        \end{table}
+        These results indicate that, although the classifier performs well on its original $H \to \gamma\gamma$ dataset, its performance degrades when applied to the $ H\to ZZ^* \to 4\ell$ events. This suggests that even after removing photon-related features, the learned representation may still carry decay-mode-specific biases that affect cross-channel transferability.
+    % subsection testing_results_of_di_photon_classifier (end)
+
+% section h_to_zz_to_4l_channel (end)
+
 \bibliographystyle{ieeetr}
 \bibliography{reference}
 
