Code: Train the CNN model supervisely and test on both di-photon and ZZ4l events

--- a/CNN/test_CNN.ipynb
+++ b/CNN/test_CNN.ipynb
@@ -10,9 +10,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-25 15:53:14.611584: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
+      "2025-06-30 13:13:38.125621: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-06-25 15:53:14.702343: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2025-06-30 13:13:38.208293: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -1508,6 +1508,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dc6dbf74",
+   "metadata": {},
+   "source": [
+    "## CWoLa case"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "aa882746",
@@ -2045,6 +2053,305 @@
       "ACC: 0.589 ± 0.012\n",
       "AUC: 0.621 ± 0.019\n",
       " & $0.700 \\pm 0.010$ & $0.755 \\pm 0.010$ & $0.589 \\pm 0.012$ & $0.621 \\pm 0.019$\n"
+     ]
+    }
+   ],
+   "source": [
+    "ACC = np.array(ACC_aa)\n",
+    "AUC = np.array(AUC_aa)\n",
+    "\n",
+    "latex_txt = ''\n",
+    "\n",
+    "print('Di-photon ACC and AUC')\n",
+    "print(f'ACC: {ACC.mean():.3f} ± {ACC.std():.3f}')\n",
+    "print(f'AUC: {AUC.mean():.3f} ± {AUC.std():.3f}')\n",
+    "latex_txt += f' & ${ACC.mean():.3f} \\pm {ACC.std():.3f}$ & ${AUC.mean():.3f} \\pm {AUC.std():.3f}$'\n",
+    "\n",
+    "ACC = np.array(ACC_ZZ_4l)\n",
+    "AUC = np.array(AUC_ZZ_4l)\n",
+    "\n",
+    "print('ZZ > 4l ACC and AUC')\n",
+    "print(f'ACC: {ACC.mean():.3f} ± {ACC.std():.3f}')\n",
+    "print(f'AUC: {AUC.mean():.3f} ± {AUC.std():.3f}')\n",
+    "latex_txt += f' & ${ACC.mean():.3f} \\pm {ACC.std():.3f}$ & ${AUC.mean():.3f} \\pm {AUC.std():.3f}$'\n",
+    "print(latex_txt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c25e545d",
+   "metadata": {},
+   "source": [
+    "## Supervised case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "533062f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_ACC_AUC_on_diphoton_and_ZZ4l_channels_supervised(config_path_pattern):\n",
+    "    \n",
+    "    ACC_aa, AUC_aa = [], []\n",
+    "    ACC_ZZ_4l, AUC_ZZ_4l = [], []\n",
+    "    for i in range(1, 11):\n",
+    "        config_path = config_path_pattern.format(i)\n",
+    "        # Read config file\n",
+    "        with open(config_path, 'r') as f:\n",
+    "            config = json.load(f)\n",
+    "        n_train = config['n_train']\n",
+    "        n_val = config['n_val']\n",
+    "        n_test = config['n_test']\n",
+    "\n",
+    "        npy_path = Path(config['npy_path'])\n",
+    "        model_name = config['model_name']\n",
+    "        \n",
+    "        save_model_name = f'./CNN_models/last_model_GGF_VBF_supervised_{model_name}/'\n",
+    "        try:\n",
+    "            loaded_model = tf.keras.models.load_model(save_model_name)\n",
+    "        except:\n",
+    "            print(f\"Model {save_model_name} not found. Skipping this configuration.\")\n",
+    "            continue\n",
+    "\n",
+    "        # Load data\n",
+    "        npy_path = Path('../Sample/data/supervised/pre-processing/remove_product_case_1/40x40/')\n",
+    "        data_b = np.load(npy_path / 'GGF-data.npy', allow_pickle=True)\n",
+    "        data_s = np.load(npy_path / 'VBF-data.npy', allow_pickle=True)\n",
+    "\n",
+    "        # Split the dataset\n",
+    "        X_test = np.concatenate((data_b[-n_test:], data_s[-n_test:]))\n",
+    "        y_test = np.concatenate((np.zeros(n_test), np.ones(n_test)))\n",
+    "\n",
+    "        # normalize the datasets\n",
+    "        X_test = pt_normalization(X_test)\n",
+    "\n",
+    "        y_pred = loaded_model.predict(X_test, batch_size=BATCH_SIZE)\n",
+    "        ACC_aa.append(get_highest_accuracy(y_test, y_pred))\n",
+    "        AUC_aa.append(roc_auc_score(y_test, y_pred))\n",
+    "\n",
+    "        # Load data\n",
+    "        npy_path = Path('../Sample/data/ZZ_4l/supervised/pre-processing/remove_product_case_4/40x40/')\n",
+    "        data_b = np.load(npy_path / 'GGF-data.npy', allow_pickle=True)\n",
+    "        data_s = np.load(npy_path / 'VBF-data.npy', allow_pickle=True)\n",
+    "\n",
+    "        # Split the dataset\n",
+    "        X_test = np.concatenate((data_b[-n_test:], data_s[-n_test:]))\n",
+    "        y_test = np.concatenate((np.zeros(n_test), np.ones(n_test)))\n",
+    "\n",
+    "        # normalize the datasets\n",
+    "        X_test = pt_normalization(X_test)\n",
+    "        print(X_test.shape, y_test.shape)\n",
+    "        y_pred = loaded_model.predict(X_test, batch_size=BATCH_SIZE)\n",
+    "        ACC_ZZ_4l.append(get_highest_accuracy(y_test, y_pred))\n",
+    "        AUC_ZZ_4l.append(roc_auc_score(y_test, y_pred))\n",
+    "\n",
+    "    return ACC_aa, AUC_aa, ACC_ZZ_4l, AUC_ZZ_4l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2425a205",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-27 17:01:50.441039: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-06-27 17:01:51.996310: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 22288 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:d8:00.0, compute capability: 8.6\n",
+      "2025-06-27 17:02:21.995119: I tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:428] Loaded cuDNN version 8401\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30/98 [========>.....................] - ETA: 0s"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-27 17:02:25.133279: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:630] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98/98 [==============================] - 8s 10ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 7ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 7ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 7ms/step\n",
+      "98/98 [==============================] - 1s 7ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 5ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 7ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 7ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 5ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "config_path_pattern = './config_files/supervised_pT_norm_remove_photon_case1_config_{:02}.json'\n",
+    "ACC_aa, AUC_aa, ACC_ZZ_4l, AUC_ZZ_4l = compute_ACC_AUC_on_diphoton_and_ZZ4l_channels_supervised(config_path_pattern)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "30b5a4a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Di-photon ACC and AUC\n",
+      "ACC: 0.775 ± 0.001\n",
+      "AUC: 0.852 ± 0.001\n",
+      "ZZ > 4l ACC and AUC\n",
+      "ACC: 0.676 ± 0.010\n",
+      "AUC: 0.730 ± 0.015\n",
+      " & $0.775 \\pm 0.001$ & $0.852 \\pm 0.001$ & $0.676 \\pm 0.010$ & $0.730 \\pm 0.015$\n"
+     ]
+    }
+   ],
+   "source": [
+    "ACC = np.array(ACC_aa)\n",
+    "AUC = np.array(AUC_aa)\n",
+    "\n",
+    "latex_txt = ''\n",
+    "\n",
+    "print('Di-photon ACC and AUC')\n",
+    "print(f'ACC: {ACC.mean():.3f} ± {ACC.std():.3f}')\n",
+    "print(f'AUC: {AUC.mean():.3f} ± {AUC.std():.3f}')\n",
+    "latex_txt += f' & ${ACC.mean():.3f} \\pm {ACC.std():.3f}$ & ${AUC.mean():.3f} \\pm {AUC.std():.3f}$'\n",
+    "\n",
+    "ACC = np.array(ACC_ZZ_4l)\n",
+    "AUC = np.array(AUC_ZZ_4l)\n",
+    "\n",
+    "print('ZZ > 4l ACC and AUC')\n",
+    "print(f'ACC: {ACC.mean():.3f} ± {ACC.std():.3f}')\n",
+    "print(f'AUC: {AUC.mean():.3f} ± {AUC.std():.3f}')\n",
+    "latex_txt += f' & ${ACC.mean():.3f} \\pm {ACC.std():.3f}$ & ${AUC.mean():.3f} \\pm {AUC.std():.3f}$'\n",
+    "print(latex_txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8d8d2b6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-30 13:13:59.212065: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-06-30 13:13:59.846207: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 22288 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:d8:00.0, compute capability: 8.6\n",
+      "2025-06-30 13:14:14.540590: I tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:428] Loaded cuDNN version 8401\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28/98 [=======>......................] - ETA: 0s"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-30 13:14:16.196021: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:630] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98/98 [==============================] - 4s 8ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 7ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 7ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "config_path_pattern = './config_files/supervised_pT_norm_remove_product_case4_config_{:02}.json'\n",
+    "ACC_aa, AUC_aa, ACC_ZZ_4l, AUC_ZZ_4l = compute_ACC_AUC_on_diphoton_and_ZZ4l_channels_supervised(config_path_pattern)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "acd2ee6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Di-photon ACC and AUC\n",
+      "ACC: 0.731 ± 0.004\n",
+      "AUC: 0.800 ± 0.005\n",
+      "ZZ > 4l ACC and AUC\n",
+      "ACC: 0.841 ± 0.001\n",
+      "AUC: 0.919 ± 0.001\n",
+      " & $0.731 \\pm 0.004$ & $0.800 \\pm 0.005$ & $0.841 \\pm 0.001$ & $0.919 \\pm 0.001$\n"
      ]
     }
    ],
