--- a/CNN/read_training_results.ipynb
+++ b/CNN/read_training_results.ipynb
@@ -1422,6 +1422,87 @@
     "print_ACC_AUC(df, sample_type)\n",
     "print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Supervised CNN: 200k+50k+50k, removed photon information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-06-27' and time < '2025-06-28'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pure, pT normalized, remove photon: case 1\n",
+      "ACC: 0.776 ± 0.001\n",
+      "AUC: 0.853 ± 0.001\n",
+      "True ACC and AUC\n",
+      "ACC: 0.775 ± 0.001\n",
+      "AUC: 0.852 ± 0.001\n",
+      "$0.776 \\pm 0.001$ & $0.853 \\pm 0.001$ & $0.775 \\pm 0.001$ & $0.852 \\pm 0.001$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'pure, pT normalized, remove photon: case 1'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-06-29' and time < '2025-06-30'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pure, pT normalized, remove product: case 4\n",
+      "ACC: 0.838 ± 0.001\n",
+      "AUC: 0.917 ± 0.001\n",
+      "True ACC and AUC\n",
+      "ACC: 0.841 ± 0.001\n",
+      "AUC: 0.919 ± 0.001\n",
+      "$0.838 \\pm 0.001$ & $0.917 \\pm 0.001$ & $0.841 \\pm 0.001$ & $0.919 \\pm 0.001$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'pure, pT normalized, remove product: case 4'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
