--- a/CNN/training_setup.ipynb
+++ b/CNN/training_setup.ipynb
@@ -2413,6 +2413,103 @@
     "    print(cmd)\n",
     "    i += 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Supervised training remove decay product information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_photon_case1_config_01.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_photon_case1_config_02.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_photon_case1_config_03.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_photon_case1_config_04.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_photon_case1_config_05.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_photon_case1_config_06.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_photon_case1_config_07.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_photon_case1_config_08.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_photon_case1_config_09.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_photon_case1_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/supervised_pT_norm_remove_photon_case1_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_path'] = '../Sample/data/supervised/pre-processing/remove_product_case_1/40x40/'\n",
+    "        data['seed'] = seed\n",
+    "        data['n_train'] = 100000\n",
+    "        data['n_val'] = 25000\n",
+    "        data['n_test'] = 25000\n",
+    "\n",
+    "        data['model_name'] = f'supervised_wo_a_case1_{i:02}'\n",
+    "        data['sample_type'] = f'pure, pT normalized, remove photon: case 1'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN_supervised.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case4_config_01.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case4_config_02.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case4_config_03.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case4_config_04.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case4_config_05.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case4_config_06.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case4_config_07.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case4_config_08.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case4_config_09.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case4_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/supervised_pT_norm_remove_product_case4_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_path'] = '../Sample/data/ZZ_4l/supervised/pre-processing/remove_product_case_4/40x40/'\n",
+    "        data['seed'] = seed\n",
+    "        data['n_train'] = 100000\n",
+    "        data['n_val'] = 25000\n",
+    "        data['n_test'] = 25000\n",
+    "\n",
+    "        data['model_name'] = f'supervised_wo_product_case4_{i:02}'\n",
+    "        data['sample_type'] = f'pure, pT normalized, remove product: case 4'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN_supervised.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
   }
  ],
  "metadata": {
