--- a/Sample/process_h5_sample.ipynb
+++ b/Sample/process_h5_sample.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,24 +87,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'./data/ZZ_4l/GGF_ZZ-03.h5' and () are same structure, can be merged.\n",
+      "'./data/ZZ_4l/GGF_ZZ-03.h5' and ('./data/ZZ_4l/GGF_ZZ-04.h5', './data/ZZ_4l/GGF_ZZ-05.h5') are same structure, can be merged.\n",
       "./data/ZZ_4l/GGF_ZZ-03_merged.h5 not exist. Copy ./data/ZZ_4l/GGF_ZZ-03.h5 to ./data/ZZ_4l/GGF_ZZ-03_merged.h5\n",
       "Size of ./data/ZZ_4l/GGF_ZZ-03.h5: 65399\n",
-      "'./data/ZZ_4l/VBF_ZZ-03.h5' and () are same structure, can be merged.\n",
+      "Size of ./data/ZZ_4l/GGF_ZZ-04.h5: 65407\n",
+      "Size of ./data/ZZ_4l/GGF_ZZ-03_merged.h5: 130806\n",
+      "Size of ./data/ZZ_4l/GGF_ZZ-05.h5: 65401\n",
+      "Size of ./data/ZZ_4l/GGF_ZZ-03_merged.h5: 196207\n",
+      "'./data/ZZ_4l/VBF_ZZ-03.h5' and ('./data/ZZ_4l/VBF_ZZ-04.h5',) are same structure, can be merged.\n",
       "./data/ZZ_4l/VBF_ZZ-03_merged.h5 not exist. Copy ./data/ZZ_4l/VBF_ZZ-03.h5 to ./data/ZZ_4l/VBF_ZZ-03_merged.h5\n",
-      "Size of ./data/ZZ_4l/VBF_ZZ-03.h5: 133162\n"
+      "Size of ./data/ZZ_4l/VBF_ZZ-03.h5: 133162\n",
+      "Size of ./data/ZZ_4l/VBF_ZZ-04.h5: 132982\n",
+      "Size of ./data/ZZ_4l/VBF_ZZ-03_merged.h5: 266144\n"
      ]
     }
    ],
    "source": [
-    "files = [f'./data/ZZ_4l/GGF_ZZ-{i:02}.h5' for i in range(3, 4)]\n",
+    "files = [f'./data/ZZ_4l/GGF_ZZ-{i:02}.h5' for i in range(3, 6)]\n",
     "\n",
     "merged_file = utils_h5.merge_h5_file(*files)\n",
     "new_name = './data/ZZ_4l/GGF.h5'\n",
     "\n",
     "os.rename(merged_file, new_name)\n",
     "\n",
-    "files = [f'./data/ZZ_4l/VBF_ZZ-{i:02}.h5' for i in range(3, 4)]\n",
+    "files = [f'./data/ZZ_4l/VBF_ZZ-{i:02}.h5' for i in range(3, 5)]\n",
     "\n",
     "merged_file = utils_h5.merge_h5_file(*files)\n",
     "new_name = './data/ZZ_4l/VBF.h5'\n",
@@ -425,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,6 +701,27 @@
     "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
     "    h5_path = f'./data/ZZ_4l/quark_jet_2_cut/{name}.h5'\n",
     "    out_h5 = f'./data/ZZ_4l/quark_jet_2_cut/pre-processing/{name}.h5'\n",
+    "    to_event_image_h5_ZZ(h5_path, out_h5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/ZZ_4l/supervised/pre-processing/VBF.h5\n",
+      "data/ZZ_4l/supervised/pre-processing/GGF.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in ['VBF', 'GGF']:\n",
+    "    h5_path = f'./data/ZZ_4l/{name}.h5'\n",
+    "    out_h5 = f'./data/ZZ_4l/supervised/pre-processing/{name}.h5'\n",
     "    to_event_image_h5_ZZ(h5_path, out_h5)"
    ]
   },
@@ -1997,6 +2024,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python pixelation-remove_decay_product_info.py data/supervised/pre-processing/VBF.h5 data/supervised/pre-processing/remove_product_case_1/40x40/VBF.npy 40 1 &\n",
+      "python pixelation-remove_decay_product_info.py data/supervised/pre-processing/GGF.h5 data/supervised/pre-processing/remove_product_case_1/40x40/GGF.npy 40 1 &\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = 40\n",
+    "case = 1\n",
+    "h5_dir = Path('./data/supervised/pre-processing')\n",
+    "npy_dir = Path(f'./data/supervised/pre-processing/remove_product_case_{case}/{res}x{res}')\n",
+    "\n",
+    "# create output directory\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name in ['VBF', 'GGF']:\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
+    "    cmd = f'python pixelation-remove_decay_product_info.py {h5_path} {npy_path} {res} {case} &'\n",
+    "    print(cmd)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2139,6 +2196,36 @@
     "npy_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
+    "    cmd = f'python pixelation-remove_decay_product_info.py {h5_path} {npy_path} {res} {case} &'\n",
+    "    print(cmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python pixelation-remove_decay_product_info.py data/ZZ_4l/supervised/pre-processing/VBF.h5 data/ZZ_4l/supervised/pre-processing/remove_product_case_4/40x40/VBF.npy 40 4 &\n",
+      "python pixelation-remove_decay_product_info.py data/ZZ_4l/supervised/pre-processing/GGF.h5 data/ZZ_4l/supervised/pre-processing/remove_product_case_4/40x40/GGF.npy 40 4 &\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = 40\n",
+    "case = 4\n",
+    "h5_dir = Path('./data/ZZ_4l/supervised/pre-processing')\n",
+    "npy_dir = Path(f'./data/ZZ_4l/supervised/pre-processing/remove_product_case_{case}/{res}x{res}')\n",
+    "\n",
+    "# create output directory\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name in ['VBF', 'GGF']:\n",
     "    h5_path = h5_dir / f'{name}.h5'\n",
     "    npy_path = npy_dir / f'{name}.npy'\n",
     "    cmd = f'python pixelation-remove_decay_product_info.py {h5_path} {npy_path} {res} {case} &'\n",
