--- a/Note/note.tex
+++ b/Note/note.tex
@@ -1055,13 +1055,13 @@
             \begin{tabular}{l|cc|cc}
                                      &\multicolumn{2}{c|}{$H\to\gamma\gamma$}&\multicolumn{2}{c}{$H\to ZZ^*\to 4\ell$}\\ \hline
                 Training channel     & ACC               & AUC               & ACC               & AUC                \\ \hline
-                $H\to\gamma\gamma$   & $0.775 \pm 0.001$ & $0.852 \pm 0.001$ & $0.676 \pm 0.010$ & $0.730 \pm 0.015$  \\
-                $H\to ZZ^*\to 4\ell$ & $0.731 \pm 0.004$ & $0.800 \pm 0.005$ & $0.841 \pm 0.001$ & $0.919 \pm 0.001$ 
+                $H\to\gamma\gamma$   & $0.775 \pm 0.001$ & $0.852 \pm 0.001$ & $0.752 \pm 0.002$ & $0.827 \pm 0.003$  \\
+                $H\to ZZ^*\to 4\ell$ & $0.738 \pm 0.002$ & $0.806 \pm 0.003$ & $0.793 \pm 0.001$ & $0.872 \pm 0.001$ 
             \end{tabular}
         \end{table}
 		Compared to the results in table~\ref{tab:supervised_CNN_training_results}, the di-photon classifier shows slightly worse performance due to the exclusion of photon-specific information.
 
-		Although both models are trained without decay product features, the CNN still captures decay-mode-specific differences. Moreover, the model trained on $H \to ZZ^* \to 4\ell$ generalizes better to the $H \to \gamma\gamma$ dataset than the reverse case. This asymmetry may be attributed to the overall better training performance in the $H \to ZZ^* \to 4\ell$ mode, suggesting that a stronger model leads to better transferability.
+		Although both models are trained without decay product features, the CNN still captures decay-mode-specific differences. Moreover, the model trained on $H \to ZZ^* \to 4\ell$ generalizes to the $H \to \gamma\gamma$ dataset worse than the reverse case.
     % subsection testing_results_of_supervised_classifier (end)
 
 % section h_to_zz_to_4l_channel (end)
