--- a/Note/note.tex
+++ b/Note/note.tex
@@ -1066,6 +1066,30 @@
 
 % section h_to_zz_to_4l_channel (end)
 
+\section{Larger training dataset}% (fold)
+\label{sec:larger_training_dataset}
+    In section~\ref{sec:removing_photon_information}, we observed that removing photon information improved the training performance. There are several possible reasons for this:
+    \begin{itemize}
+        \item The photon channel contains large ``blank'' regions, which may confuse the neural network.
+        \item Photons have higher transverse momentum, leading the network to focus on them and delay learning the jet features.
+    \end{itemize}
+    Increasing the size of the training dataset may help mitigate these effects, allowing the network to eventually learn both photon and jet patterns effectively.
+
+    We evaluate model performance using the $2q0g$ dataset at different integrated luminosities, while retaining the photon information during training. The results are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_jet_tagging_L_3000_12000}.
+    \begin{table}[htpb]
+        \centering
+        \caption{CNN training results with different dataset sizes corresponding to various luminosities. Each model is trained with photon information included. The ACC and AUC are evaluated over 10 training runs.}
+        \label{tab:CWoLa_CNN_training_results_3000_jet_tagging_L_3000_12000}
+        \begin{tabular}{l|cc|cc}
+                                    & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
+            Luminosity (fb$^{-1}$)  & ACC               & AUC               & ACC               & AUC               \\ \hline
+            3000                    & $0.615 \pm 0.005$ & $0.632 \pm 0.007$ & $0.650 \pm 0.011$ & $0.703 \pm 0.015$ \\
+            12000                   & $0.643 \pm 0.002$ & $0.684 \pm 0.003$ & $0.689 \pm 0.009$ & $0.743 \pm 0.011$
+        \end{tabular}
+    \end{table}
+    These results indicate that increasing the dataset size leads to performance improvement, even when photon information is retained.
+% section larger_training_dataset (end)
+
 \bibliographystyle{ieeetr}
 \bibliography{reference}
 
