Code: Train CNN with larger dataset

--- a/CNN/read_training_results.ipynb
+++ b/CNN/read_training_results.ipynb
@@ -1503,6 +1503,87 @@
     "print_ACC_AUC(df, sample_type)\n",
     "print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-06-30' and time < '2025-07-01'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pure, pT normalized, remove product: case 5\n",
+      "ACC: 0.789 ± 0.002\n",
+      "AUC: 0.869 ± 0.001\n",
+      "True ACC and AUC\n",
+      "ACC: 0.793 ± 0.001\n",
+      "AUC: 0.872 ± 0.001\n",
+      "$0.789 \\pm 0.002$ & $0.869 \\pm 0.001$ & $0.793 \\pm 0.001$ & $0.872 \\pm 0.001$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'pure, pT normalized, remove product: case 5'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Jet tagging with luminosity 12000 $\\text{fb}^{-1}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-07-01' and time < '2025-07-02'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 12000 fb^-1, pT normalized\n",
+      "ACC: 0.643 ± 0.002\n",
+      "AUC: 0.684 ± 0.003\n",
+      "True ACC and AUC\n",
+      "ACC: 0.689 ± 0.009\n",
+      "AUC: 0.743 ± 0.011\n",
+      "$0.643 \\pm 0.002$ & $0.684 \\pm 0.003$ & $0.689 \\pm 0.009$ & $0.743 \\pm 0.011$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 12000 fb^-1, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
