--- a/CNN/test_CNN.ipynb
+++ b/CNN/test_CNN.ipynb
@@ -10,9 +10,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-30 13:13:38.125621: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
+      "2025-06-30 21:11:33.880797: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-06-30 13:13:38.208293: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2025-06-30 21:11:33.985437: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -2087,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "533062f0",
    "metadata": {},
    "outputs": [],
@@ -2132,7 +2132,7 @@
     "        AUC_aa.append(roc_auc_score(y_test, y_pred))\n",
     "\n",
     "        # Load data\n",
-    "        npy_path = Path('../Sample/data/ZZ_4l/supervised/pre-processing/remove_product_case_4/40x40/')\n",
+    "        npy_path = Path('../Sample/data/ZZ_4l/supervised/pre-processing/remove_product_case_5/40x40/')\n",
     "        data_b = np.load(npy_path / 'GGF-data.npy', allow_pickle=True)\n",
     "        data_s = np.load(npy_path / 'VBF-data.npy', allow_pickle=True)\n",
     "\n",
@@ -2142,7 +2142,6 @@
     "\n",
     "        # normalize the datasets\n",
     "        X_test = pt_normalization(X_test)\n",
-    "        print(X_test.shape, y_test.shape)\n",
     "        y_pred = loaded_model.predict(X_test, batch_size=BATCH_SIZE)\n",
     "        ACC_ZZ_4l.append(get_highest_accuracy(y_test, y_pred))\n",
     "        AUC_ZZ_4l.append(roc_auc_score(y_test, y_pred))\n",
@@ -2152,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "2425a205",
    "metadata": {},
    "outputs": [
@@ -2160,31 +2159,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-27 17:01:50.441039: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-06-27 17:01:51.996310: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 22288 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:d8:00.0, compute capability: 8.6\n",
-      "2025-06-27 17:02:21.995119: I tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:428] Loaded cuDNN version 8401\n"
+      "2025-06-30 21:12:31.251878: I tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:428] Loaded cuDNN version 8401\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30/98 [========>.....................] - ETA: 0s"
+      "28/98 [=======>......................] - ETA: 0s"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-27 17:02:25.133279: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:630] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n"
+      "2025-06-30 21:12:32.843300: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:630] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "98/98 [==============================] - 8s 10ms/step\n",
+      "98/98 [==============================] - 4s 7ms/step\n",
       "(50000, 40, 40, 2) (50000,)\n",
       "98/98 [==============================] - 1s 6ms/step\n",
       "98/98 [==============================] - 1s 7ms/step\n",
@@ -2192,26 +2188,26 @@
       "98/98 [==============================] - 1s 6ms/step\n",
       "98/98 [==============================] - 1s 6ms/step\n",
       "(50000, 40, 40, 2) (50000,)\n",
-      "98/98 [==============================] - 1s 7ms/step\n",
       "98/98 [==============================] - 1s 6ms/step\n",
-      "(50000, 40, 40, 2) (50000,)\n",
-      "98/98 [==============================] - 1s 7ms/step\n",
-      "98/98 [==============================] - 1s 7ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
       "(50000, 40, 40, 2) (50000,)\n",
       "98/98 [==============================] - 1s 6ms/step\n",
       "98/98 [==============================] - 1s 6ms/step\n",
       "(50000, 40, 40, 2) (50000,)\n",
       "98/98 [==============================] - 1s 6ms/step\n",
-      "98/98 [==============================] - 1s 5ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
       "(50000, 40, 40, 2) (50000,)\n",
       "98/98 [==============================] - 1s 7ms/step\n",
       "98/98 [==============================] - 1s 6ms/step\n",
       "(50000, 40, 40, 2) (50000,)\n",
       "98/98 [==============================] - 1s 6ms/step\n",
-      "98/98 [==============================] - 1s 7ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
       "(50000, 40, 40, 2) (50000,)\n",
       "98/98 [==============================] - 1s 6ms/step\n",
-      "98/98 [==============================] - 1s 5ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
       "(50000, 40, 40, 2) (50000,)\n",
       "98/98 [==============================] - 1s 6ms/step\n"
      ]
@@ -2224,7 +2220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "30b5a4a9",
    "metadata": {},
    "outputs": [
@@ -2236,9 +2232,9 @@
       "ACC: 0.775 ± 0.001\n",
       "AUC: 0.852 ± 0.001\n",
       "ZZ > 4l ACC and AUC\n",
-      "ACC: 0.676 ± 0.010\n",
-      "AUC: 0.730 ± 0.015\n",
-      " & $0.775 \\pm 0.001$ & $0.852 \\pm 0.001$ & $0.676 \\pm 0.010$ & $0.730 \\pm 0.015$\n"
+      "ACC: 0.752 ± 0.002\n",
+      "AUC: 0.827 ± 0.003\n",
+      " & $0.775 \\pm 0.001$ & $0.852 \\pm 0.001$ & $0.752 \\pm 0.002$ & $0.827 \\pm 0.003$\n"
      ]
     }
    ],
@@ -2265,7 +2261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8d8d2b6c",
    "metadata": {},
    "outputs": [
@@ -2337,7 +2333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "acd2ee6e",
    "metadata": {},
    "outputs": [
@@ -2352,6 +2348,95 @@
       "ACC: 0.841 ± 0.001\n",
       "AUC: 0.919 ± 0.001\n",
       " & $0.731 \\pm 0.004$ & $0.800 \\pm 0.005$ & $0.841 \\pm 0.001$ & $0.919 \\pm 0.001$\n"
+     ]
+    }
+   ],
+   "source": [
+    "ACC = np.array(ACC_aa)\n",
+    "AUC = np.array(AUC_aa)\n",
+    "\n",
+    "latex_txt = ''\n",
+    "\n",
+    "print('Di-photon ACC and AUC')\n",
+    "print(f'ACC: {ACC.mean():.3f} ± {ACC.std():.3f}')\n",
+    "print(f'AUC: {AUC.mean():.3f} ± {AUC.std():.3f}')\n",
+    "latex_txt += f' & ${ACC.mean():.3f} \\pm {ACC.std():.3f}$ & ${AUC.mean():.3f} \\pm {AUC.std():.3f}$'\n",
+    "\n",
+    "ACC = np.array(ACC_ZZ_4l)\n",
+    "AUC = np.array(AUC_ZZ_4l)\n",
+    "\n",
+    "print('ZZ > 4l ACC and AUC')\n",
+    "print(f'ACC: {ACC.mean():.3f} ± {ACC.std():.3f}')\n",
+    "print(f'AUC: {AUC.mean():.3f} ± {AUC.std():.3f}')\n",
+    "latex_txt += f' & ${ACC.mean():.3f} \\pm {ACC.std():.3f}$ & ${AUC.mean():.3f} \\pm {AUC.std():.3f}$'\n",
+    "print(latex_txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "227eaa5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "98/98 [==============================] - 1s 6ms/step\n",
+      "(50000, 40, 40, 2) (50000,)\n",
+      "98/98 [==============================] - 1s 6ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "config_path_pattern = './config_files/supervised_pT_norm_remove_product_case5_config_{:02}.json'\n",
+    "ACC_aa, AUC_aa, ACC_ZZ_4l, AUC_ZZ_4l = compute_ACC_AUC_on_diphoton_and_ZZ4l_channels_supervised(config_path_pattern)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1f7f6f61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Di-photon ACC and AUC\n",
+      "ACC: 0.738 ± 0.002\n",
+      "AUC: 0.806 ± 0.003\n",
+      "ZZ > 4l ACC and AUC\n",
+      "ACC: 0.793 ± 0.001\n",
+      "AUC: 0.872 ± 0.001\n",
+      " & $0.738 \\pm 0.002$ & $0.806 \\pm 0.003$ & $0.793 \\pm 0.001$ & $0.872 \\pm 0.001$\n"
      ]
     }
    ],
