--- a/CNN/training_setup.ipynb
+++ b/CNN/training_setup.ipynb
@@ -2510,6 +2510,103 @@
     "    print(cmd)\n",
     "    i += 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case5_config_01.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case5_config_02.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case5_config_03.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case5_config_04.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case5_config_05.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case5_config_06.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case5_config_07.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case5_config_08.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case5_config_09.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_remove_product_case5_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/supervised_pT_norm_remove_product_case5_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_path'] = '../Sample/data/ZZ_4l/supervised/pre-processing/remove_product_case_5/40x40/'\n",
+    "        data['seed'] = seed\n",
+    "        data['n_train'] = 100000\n",
+    "        data['n_val'] = 25000\n",
+    "        data['n_test'] = 25000\n",
+    "\n",
+    "        data['model_name'] = f'supervised_wo_product_case4_{i:02}'\n",
+    "        data['sample_type'] = f'pure, pT normalized, remove product: case 5'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN_supervised.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Jet tagging with luminosity 12000 $\\text{fb}^{-1}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_pT_norm_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_pT_norm_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_pT_norm_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_pT_norm_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_pT_norm_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_pT_norm_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_pT_norm_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_pT_norm_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_pT_norm_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_pT_norm_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_12000_pT_norm_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/']\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 12000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_{i:02}'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 12000 fb^-1, pT normalized'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
   }
  ],
  "metadata": {
